chore: provide prebuild assets

--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,13 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 phoenix_storybook-*.tar
 
-/priv/static/**/*.gz
-/priv/static/**/*-????????????????????????????????.*
-/priv/static/css
-/priv/static/js
-/priv/static/cache_manifest.json
+# AKRADEMICS: for now our fork provides prebuild assets by naively checking all of these in
+# assets are generated with `mix dev.storybook`
+# /priv/static/**/*.gz
+# /priv/static/**/*-????????????????????????????????.*
+# /priv/static/css
+# /priv/static/js
+# /priv/static/cache_manifest.json
 
 # Temporary files, for example, from tests.
 /tmp/
